syntax = "proto3";

package order;

option go_package = "delivery-proto/orderpb";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message OrderItem {
  int32 product_id = 1;
  int32 quantity = 2;
  string comments = 3;
}

message CreateOrderRequest {
  int32 client_id = 1;
  string client_name = 2;
  string client_phone = 3;

  string address = 4;
  double lat = 5;
  double lng = 6;

  repeated OrderItem items = 7;
  int32 restaurant_id = 8;
  string restaurant_name = 9;
}

message CreateOrderResponse {
  int32 order_id = 1;
  string message = 2;
  string estado = 3;
}
